# crop-recommendation-system

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.train  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
.matplotlib-cache/: fontlist-v390.json
app/: main.py  model_store.py  schemas.py
app/routers/: health.py  model.py  predict.py
artifacts/: final_model_meta.json  model_v1.json  model_v2.json  modelo_final_meta.json
notebooks/: 01_eda_preprocessing.ipynb
reports/: cv_results.csv  real_confusion_analysis.md
reports/figures/: classification_report.txt
scripts/: build_pipeline.py  download_data.py  simulate_version_mismatch.py  train_models.py
src/crop_reco/: __init__.py  config.py  data.py  eda.py  explainability.py  logger.py  modeling.py  preprocessing.py
tests/: conftest.py  test_data.py  test_eda.py  test_preprocessing.py
tests/integration/: test_api_health.py  test_api_predict.py  test_api_rollback.py
tests/smoke/: test_artifact_compat.py
tests/unit/: test_modeling.py
